# a-json-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  CNAME  Dockerfile  NEWS.md  NOTICE  README.md  _config.yml  ajsonlibraryConfig.cmake.in  build.sh  scaffold.yaml
.changes/: 0.0.1.md
include/a-json-library/: ajson.h
include/a-json-library/impl/: ajson.h
src/: ajson.c
tests/: CMakeLists.txt
tests/src/: test_ajson.c
